--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,7 +1,53 @@
+#form_container {
+  position: fixed;
+  background: #00000050;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+
 #form {
-  width: 35rem;
+  background-color: white;
+  border: solid black 1px;
+  padding: 1rem;
+  width: 40rem;
+
+  /*Modal Popup*/
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+}
+
+#form__title {
+  text-align: left;
+}
+
+#form__skillBox {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#form__selectedSkillsMsg {
+  margin-top: 2rem;
 }
 
 #form__selectedSkillsMsg__sub {
   font-size: 12px;
+}
+
+#form__selectedSkillsMsg__counter {
+  font-size: 20px;
+  text-align: center;
+  color: blue;
+}
+
+.exit-form {
+  width: 3rem;
+  height: auto;
+  float: right;
+  cursor: pointer;
 }
